--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
-    "peer": "^1.0.0"
+    "peer": "^1.0.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "eslint": "^8.36.0"
