--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
+    "pdfkit": "^0.13.0",
     "peer": "^1.0.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.36.0"
