--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for Honesto angular application",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "concurrently --kill-others \"node index.js\" \"node kurento.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -25,6 +25,7 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "concurrently": "^8.0.1",
     "eslint": "^8.36.0"
   }
 }
